package com.designpattern.creational.abstractfactory.colors;

/**
 * @Auther: ZhengHuaJing
 * @Date: 2020/10/12 16:31
 * @Description:
 */
public class Green implements Color {

    @Override
    public void fill() {
        System.out.println("Green");
    }
}
