package com.designpattern.creational.abstractfactory.colors;

/**
 * @Auther: ZhengHuaJing
 * @Date: 2020/10/12 16:31
 * @Description:
 */
public class Red implements Color {
    
    @Override
    public void fill() {
        System.out.println("Red");
    }
}
